Fixed Spacing

--- a/scss/pages/index.scss
+++ b/scss/pages/index.scss
@@ -150,7 +150,7 @@ div.works  {
     flex-wrap: wrap;
     padding: 0px 50px;
     justify-content: space-evenly;
-    column-gap: 10px;
+    column-gap: 25px;
 }
 /* Stile titolo */
 h1.title {
